2006-03-25  Kim F. Storm  <storm@cua.dk>

	* emulation/cua-base.el (cua-rectangle-mark-key): New defcustom.
	(cua--init-keymaps): Use it instead of fixed C-return.
	(cua-mode): Set after it.

	* emulation/cua-rect.el (cua--init-rectangles): Use
	cua-rectangle-mark-key instead of fixed C-return.

2006-03-25  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdba): Revert 2006-03-10 change for case of
	"run" in .gdbinit.
	(gdb-var-create-regexp): Remove "^done" prefix for gdb-mi.el.

2006-03-24  Romain Francoise  <romain@orebokech.com>

	* files.el (ctl-x-5-map): Really bind C-x 5 C-o to
	`display-buffer-other-frame'.

2006-03-24  Kim F. Storm  <storm@cua.dk>

	* apropos.el (apropos-synonyms): Add selection => region.

2006-03-24  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-var-create-regexp)
	(gdb-var-list-children-regexp, gdb-var-update-regexp)
	(gdb-var-list-children-regexp-1, gdb-var-update-regexp-1)
	(gdb-data-list-register-values-regexp)
	(gdb-stack-list-locals-regexp, gdb-stack-list-locals-handler):
	Future proof against new fields being added to MI output.
	(gdb-send): Don't treat backslashes for program input as
	continuations.
	(gdb-assembler-handler): Don't use window-start for this handler.
	(gdb-frame-handler): Don't change to hollow arrow if overlay
	arrow doesn't move to new frame.

2006-03-24  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-continuation): Declare earlier to
	prevent compiler warnings.
	(gdb-stopped): Check for gud-last-last-frame (case: signal).
	(breakpoint-disabled): Make lighter for contrast with overlay
	arrow.
	(gdb-assembler-custom): Use hollow-right-triangle for assembler
	buffer too.

2006-03-23  Reiner Steib  <reinersteib+gmane@imap.cc>

	* pgg-gpg.el (pgg-gpg-update-agent): Check for
	make-network-process, so we can use the same code in Gnus v5-10
	too and have this file fully synchronized with that release.

2006-03-23  Romain Francoise  <romain@orebokech.com>
